--- a/ProjectX/Base.lproj/Main.storyboard
+++ b/ProjectX/Base.lproj/Main.storyboard
@@ -1738,11 +1738,48 @@
                                                 <constraint firstItem="ci5-Bm-t9v" firstAttribute="leading" secondItem="Rlq-LI-daY" secondAttribute="leading" id="xsJ-BH-hfR"/>
                                             </constraints>
                                         </stackView>
+                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="IhA-pb-m8E">
+                                            <rect key="frame" x="110.5" y="302" width="154" height="30"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="facebook-logo" translatesAutoresizingMaskIntoConstraints="NO" id="gGO-zM-mT4">
+                                                    <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="KON-La-dk6"/>
+                                                        <constraint firstAttribute="height" constant="30" id="tWo-Gv-gJl"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="igLogo" translatesAutoresizingMaskIntoConstraints="NO" id="b6m-rX-oxQ">
+                                                    <rect key="frame" x="62" y="0.0" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="EBO-Sg-aHf"/>
+                                                        <constraint firstAttribute="height" constant="30" id="gy3-1o-mux"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Twitter_Logo_Blue-2" translatesAutoresizingMaskIntoConstraints="NO" id="U7v-ze-hPL">
+                                                    <rect key="frame" x="124" y="0.0" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="36w-QI-dK6"/>
+                                                        <constraint firstAttribute="width" constant="30" id="oRI-D8-nli"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="gGO-zM-mT4" secondAttribute="bottom" id="1Nz-lE-EXy"/>
+                                                <constraint firstItem="gGO-zM-mT4" firstAttribute="top" secondItem="IhA-pb-m8E" secondAttribute="top" id="22V-UN-l1v"/>
+                                                <constraint firstAttribute="bottom" secondItem="b6m-rX-oxQ" secondAttribute="bottom" id="DMh-tH-aiG"/>
+                                                <constraint firstItem="gGO-zM-mT4" firstAttribute="leading" secondItem="IhA-pb-m8E" secondAttribute="leading" id="Vj5-Ez-XxB"/>
+                                                <constraint firstAttribute="bottom" secondItem="U7v-ze-hPL" secondAttribute="bottom" id="dGY-Ht-XID"/>
+                                                <constraint firstItem="b6m-rX-oxQ" firstAttribute="top" secondItem="IhA-pb-m8E" secondAttribute="top" id="opB-Vh-N61"/>
+                                                <constraint firstItem="U7v-ze-hPL" firstAttribute="top" secondItem="IhA-pb-m8E" secondAttribute="top" id="vfl-fG-oYU"/>
+                                                <constraint firstAttribute="trailing" secondItem="U7v-ze-hPL" secondAttribute="trailing" id="yik-e4-A2f"/>
+                                            </constraints>
+                                        </stackView>
                                     </subviews>
                                     <constraints>
                                         <constraint firstAttribute="trailingMargin" secondItem="yMJ-f8-k6j" secondAttribute="trailing" constant="8" id="1fS-cu-mRX"/>
                                         <constraint firstItem="pix-av-Cx4" firstAttribute="centerX" secondItem="LbL-sJ-0qo" secondAttribute="centerX" id="5gI-2q-7HO"/>
                                         <constraint firstItem="yMJ-f8-k6j" firstAttribute="leading" secondItem="LbL-sJ-0qo" secondAttribute="leadingMargin" constant="8" id="7Dl-dK-DUL"/>
+                                        <constraint firstItem="IhA-pb-m8E" firstAttribute="top" secondItem="Rlq-LI-daY" secondAttribute="bottom" constant="25" id="7x2-sK-rbz"/>
                                         <constraint firstItem="bC9-UX-zST" firstAttribute="top" secondItem="pix-av-Cx4" secondAttribute="bottom" constant="4" id="8TI-ag-DRC"/>
                                         <constraint firstItem="MTp-Kr-3Nk" firstAttribute="centerX" secondItem="LbL-sJ-0qo" secondAttribute="centerX" constant="-114" id="8an-Oe-dnD"/>
                                         <constraint firstItem="yMJ-f8-k6j" firstAttribute="centerX" secondItem="LbL-sJ-0qo" secondAttribute="centerX" id="9Hk-3k-B6i"/>
@@ -1758,15 +1795,19 @@
                                         <constraint firstItem="yMJ-f8-k6j" firstAttribute="top" secondItem="o6L-wR-HZT" secondAttribute="bottom" constant="8" id="lV4-7W-zFw"/>
                                         <constraint firstAttribute="bottom" secondItem="MTp-Kr-3Nk" secondAttribute="bottom" constant="8" id="loi-jQ-4Rt"/>
                                         <constraint firstItem="pix-av-Cx4" firstAttribute="centerX" secondItem="LbL-sJ-0qo" secondAttribute="centerX" id="pKK-h9-2qg"/>
+                                        <constraint firstItem="IhA-pb-m8E" firstAttribute="centerX" secondItem="LbL-sJ-0qo" secondAttribute="centerX" id="pd9-vy-cPt"/>
                                         <constraint firstItem="o6L-wR-HZT" firstAttribute="centerX" secondItem="LbL-sJ-0qo" secondAttribute="centerX" id="t42-On-AQW"/>
                                         <constraint firstItem="bC9-UX-zST" firstAttribute="centerX" secondItem="LbL-sJ-0qo" secondAttribute="centerX" id="tkQ-Mk-rKL"/>
                                     </constraints>
                                     <connections>
                                         <outlet property="bio" destination="yMJ-f8-k6j" id="9O4-e8-Eal"/>
+                                        <outlet property="facebookLogo" destination="gGO-zM-mT4" id="oBt-33-PdT"/>
                                         <outlet property="followLabel" destination="ci5-Bm-t9v" id="Ucg-RV-pmf"/>
+                                        <outlet property="instagramLogo" destination="b6m-rX-oxQ" id="fRa-9M-xnY"/>
                                         <outlet property="messageLabel" destination="AXq-Ho-IBq" id="toY-sw-g9e"/>
                                         <outlet property="name" destination="bC9-UX-zST" id="LgA-Ce-NBB"/>
                                         <outlet property="profileImage" destination="pix-av-Cx4" id="Pug-d9-Ean"/>
+                                        <outlet property="twitterLogo" destination="U7v-ze-hPL" id="9iF-8p-89V"/>
                                         <outlet property="username" destination="o6L-wR-HZT" id="FwS-al-xff"/>
                                     </connections>
                                 </collectionReusableView>
@@ -1781,7 +1822,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="V1W-q6-egF"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Profile" id="HfX-QS-zoY">
+                    <navigationItem key="navigationItem" title="Profile" largeTitleDisplayMode="always" id="HfX-QS-zoY">
                         <barButtonItem key="leftBarButtonItem" systemItem="edit" id="mTd-8P-XWv">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
@@ -1836,7 +1877,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="E57-g2-dsQ"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Edit Profile" id="bf3-i8-2Jf">
+                    <navigationItem key="navigationItem" title="Edit Profile" largeTitleDisplayMode="always" id="bf3-i8-2Jf">
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="oFp-yh-CIc">
                             <connections>
                                 <action selector="didTapSave:" destination="AB5-tH-Yf7" id="k2L-E8-DcS"/>
@@ -1900,11 +1941,14 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Twitter_Logo_Blue-2" width="400" height="400"/>
         <image name="account" width="24" height="24"/>
         <image name="back" width="24" height="24"/>
         <image name="chat" width="24" height="24"/>
         <image name="explore" width="24" height="24"/>
+        <image name="facebook-logo" width="512" height="512"/>
         <image name="home" width="24" height="24"/>
+        <image name="igLogo" width="250" height="250"/>
         <image name="image_placeholder" width="375" height="375"/>
         <image name="logo_nobackground" width="180" height="180"/>
         <image name="touch-id-icon" width="512" height="512"/>
