--- a/ProjectX/Base.lproj/Main.storyboard
+++ b/ProjectX/Base.lproj/Main.storyboard
@@ -771,7 +771,7 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="30"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8kZ-11-85b">
-                                        <rect key="frame" x="8" y="4" width="65" height="22"/>
+                                        <rect key="frame" x="8" y="3" width="65" height="24"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="65" id="Ksp-UP-CJn"/>
                                         </constraints>
@@ -1892,6 +1892,7 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="dXo-9h-DeI" firstAttribute="leading" secondItem="E57-g2-dsQ" secondAttribute="leading" id="48G-Xn-lpr"/>
                             <constraint firstItem="E57-g2-dsQ" firstAttribute="bottom" secondItem="dXo-9h-DeI" secondAttribute="bottom" id="GwL-Uy-AJE"/>
@@ -1899,6 +1900,9 @@
                             <constraint firstItem="E57-g2-dsQ" firstAttribute="trailing" secondItem="dXo-9h-DeI" secondAttribute="trailing" id="gPm-Tw-KS8"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="E57-g2-dsQ"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="hyL-8F-ZmS" appends="YES" id="wdF-EA-fka"/>
+                        </connections>
                     </view>
                     <navigationItem key="navigationItem" title="Edit Profile" largeTitleDisplayMode="always" id="bf3-i8-2Jf">
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="oFp-yh-CIc">
@@ -1912,6 +1916,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vin-rD-2DA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="hyL-8F-ZmS">
+                    <connections>
+                        <action selector="tapGestureForKeyboard:" destination="AB5-tH-Yf7" id="aDX-Rt-Wg9"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="2488.8000000000002" y="3318.8905547226391"/>
         </scene>
