--- a/ProjectX/Base.lproj/Main.storyboard
+++ b/ProjectX/Base.lproj/Main.storyboard
@@ -53,7 +53,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="8BG-Lq-SGX" customClass="MFTextField">
-                                        <rect key="frame" x="41" y="297" width="293" height="32.5"/>
+                                        <rect key="frame" x="41" y="297" width="293" height="19"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="293" id="G3F-08-mVe"/>
@@ -76,7 +76,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Quh-gG-szU">
-                                        <rect key="frame" x="105" y="382.5" width="165" height="38"/>
+                                        <rect key="frame" x="105" y="369" width="165" height="38"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="38" id="Acf-6T-GEC"/>
                                             <constraint firstAttribute="width" constant="165" id="QCr-Sf-8XE"/>
@@ -90,7 +90,7 @@
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ney-OB-1hx">
-                                        <rect key="frame" x="105" y="458.5" width="165" height="84"/>
+                                        <rect key="frame" x="105" y="445" width="165" height="84"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Log in with Touch ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xwm-rg-of8">
                                                 <rect key="frame" x="0.0" y="54" width="155" height="21"/>
@@ -122,7 +122,7 @@
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="26" translatesAutoresizingMaskIntoConstraints="NO" id="BKJ-4g-HeG">
-                                        <rect key="frame" x="50" y="576.5" width="275" height="30"/>
+                                        <rect key="frame" x="50" y="563" width="275" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New to Project X?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dAS-Q8-LCM">
                                                 <rect key="frame" x="0.0" y="0.0" width="156" height="30"/>
@@ -1866,37 +1866,49 @@
                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="IhA-pb-m8E">
                                             <rect key="frame" x="139.5" y="302" width="96" height="20"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="facebook-logo" translatesAutoresizingMaskIntoConstraints="NO" id="gGO-zM-mT4">
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MfD-cX-eZL" userLabel="FBButton">
                                                     <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="20" id="KON-La-dk6"/>
-                                                        <constraint firstAttribute="height" constant="20" id="tWo-Gv-gJl"/>
+                                                        <constraint firstAttribute="height" constant="20" id="6ha-it-Z73"/>
+                                                        <constraint firstAttribute="width" constant="20" id="ZBz-TN-inS"/>
                                                     </constraints>
-                                                </imageView>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="igLogo" translatesAutoresizingMaskIntoConstraints="NO" id="b6m-rX-oxQ">
+                                                    <state key="normal" title="Button" image="facebook-logo"/>
+                                                    <connections>
+                                                        <action selector="facebookButton:" destination="LbL-sJ-0qo" eventType="touchUpInside" id="vx2-fA-JcF"/>
+                                                    </connections>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hbi-5M-FTO" userLabel="IGButton">
                                                     <rect key="frame" x="38" y="0.0" width="20" height="20"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="20" id="EBO-Sg-aHf"/>
-                                                        <constraint firstAttribute="height" constant="20" id="gy3-1o-mux"/>
+                                                        <constraint firstAttribute="width" constant="20" id="Vs7-l1-B7Z"/>
+                                                        <constraint firstAttribute="height" constant="20" id="wM5-bF-RSf"/>
                                                     </constraints>
-                                                </imageView>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Twitter_Logo_Blue-2" translatesAutoresizingMaskIntoConstraints="NO" id="U7v-ze-hPL">
+                                                    <state key="normal" title="Button" image="igLogo"/>
+                                                    <connections>
+                                                        <action selector="instagramButton:" destination="LbL-sJ-0qo" eventType="touchUpInside" id="hEc-e6-aJp"/>
+                                                    </connections>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ENK-e9-BJ3" userLabel="twitterButton">
                                                     <rect key="frame" x="76" y="0.0" width="20" height="20"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="20" id="36w-QI-dK6"/>
-                                                        <constraint firstAttribute="width" constant="20" id="oRI-D8-nli"/>
+                                                        <constraint firstAttribute="width" constant="20" id="ai1-gE-PNe"/>
+                                                        <constraint firstAttribute="height" constant="20" id="eFt-g8-mTG"/>
                                                     </constraints>
-                                                </imageView>
+                                                    <state key="normal" title="Button" image="Twitter_Logo_Blue-2"/>
+                                                    <connections>
+                                                        <action selector="twitterButton:" destination="LbL-sJ-0qo" eventType="touchUpInside" id="h6x-y0-VEH"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="gGO-zM-mT4" secondAttribute="bottom" id="1Nz-lE-EXy"/>
-                                                <constraint firstItem="gGO-zM-mT4" firstAttribute="top" secondItem="IhA-pb-m8E" secondAttribute="top" id="22V-UN-l1v"/>
-                                                <constraint firstAttribute="bottom" secondItem="b6m-rX-oxQ" secondAttribute="bottom" id="DMh-tH-aiG"/>
-                                                <constraint firstItem="gGO-zM-mT4" firstAttribute="leading" secondItem="IhA-pb-m8E" secondAttribute="leading" id="Vj5-Ez-XxB"/>
-                                                <constraint firstAttribute="bottom" secondItem="U7v-ze-hPL" secondAttribute="bottom" id="dGY-Ht-XID"/>
-                                                <constraint firstItem="b6m-rX-oxQ" firstAttribute="top" secondItem="IhA-pb-m8E" secondAttribute="top" id="opB-Vh-N61"/>
-                                                <constraint firstItem="U7v-ze-hPL" firstAttribute="top" secondItem="IhA-pb-m8E" secondAttribute="top" id="vfl-fG-oYU"/>
-                                                <constraint firstAttribute="trailing" secondItem="U7v-ze-hPL" secondAttribute="trailing" id="yik-e4-A2f"/>
+                                                <constraint firstItem="ENK-e9-BJ3" firstAttribute="top" secondItem="IhA-pb-m8E" secondAttribute="top" id="6Vj-UF-WR9"/>
+                                                <constraint firstAttribute="bottom" secondItem="MfD-cX-eZL" secondAttribute="bottom" id="73Z-Cv-awX"/>
+                                                <constraint firstItem="hbi-5M-FTO" firstAttribute="top" secondItem="IhA-pb-m8E" secondAttribute="top" id="9EL-Sf-Wk6"/>
+                                                <constraint firstAttribute="trailing" secondItem="ENK-e9-BJ3" secondAttribute="trailing" id="9jy-eh-vqI"/>
+                                                <constraint firstItem="MfD-cX-eZL" firstAttribute="leading" secondItem="IhA-pb-m8E" secondAttribute="leading" id="Dei-0o-t1E"/>
+                                                <constraint firstAttribute="bottom" secondItem="ENK-e9-BJ3" secondAttribute="bottom" id="HJV-10-LVZ"/>
+                                                <constraint firstItem="MfD-cX-eZL" firstAttribute="top" secondItem="IhA-pb-m8E" secondAttribute="top" id="ZBJ-ap-527"/>
+                                                <constraint firstAttribute="bottom" secondItem="hbi-5M-FTO" secondAttribute="bottom" id="af3-lf-tSs"/>
                                             </constraints>
                                         </stackView>
                                     </subviews>
@@ -1926,13 +1938,10 @@
                                     </constraints>
                                     <connections>
                                         <outlet property="bio" destination="yMJ-f8-k6j" id="9O4-e8-Eal"/>
-                                        <outlet property="facebookLogo" destination="gGO-zM-mT4" id="oBt-33-PdT"/>
                                         <outlet property="followLabel" destination="ci5-Bm-t9v" id="Ucg-RV-pmf"/>
-                                        <outlet property="instagramLogo" destination="b6m-rX-oxQ" id="fRa-9M-xnY"/>
                                         <outlet property="messageLabel" destination="AXq-Ho-IBq" id="toY-sw-g9e"/>
                                         <outlet property="name" destination="bC9-UX-zST" id="LgA-Ce-NBB"/>
                                         <outlet property="profileImage" destination="pix-av-Cx4" id="Pug-d9-Ean"/>
-                                        <outlet property="twitterLogo" destination="U7v-ze-hPL" id="9iF-8p-89V"/>
                                         <outlet property="username" destination="o6L-wR-HZT" id="FwS-al-xff"/>
                                     </connections>
                                 </collectionReusableView>
