shadow added to card

--- a/ProjectX/Base.lproj/Main.storyboard
+++ b/ProjectX/Base.lproj/Main.storyboard
@@ -631,7 +631,7 @@
                     </connections>
                 </panGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1598" y="1746"/>
+            <point key="canvasLocation" x="1597.5999999999999" y="1745.577211394303"/>
         </scene>
         <!--New event-->
         <scene sceneID="6Dd-2v-c9l">
